# winding

./: .gitattributes  .gitignore  CNAME  MARKETING.md  ORG.md  README.md  TODO.md  _config.yml  agent.md  architecture.md  index.html  index.md  pyproject.toml  robots.txt  setup.cfg  wind.md  winding.md  winding.vm.md
.github/workflows/: workflow.yaml
reference/: hello_world.md  hello_world.py  image_block_revisited.md  my_first_winding_web_page.md
reference/fred/: winding.md
reference/karpathy/: insights.sh
reference/smalltalk/: dragons.md  feynman_wind.md  landing.md  more_chitchat.md  smalltalk_starts.md  takeoff.md  they_wait.md  transformation.md  winding.md
samples/: @a:  cursor.py  dragon.py  gpt-image.py  ice.md  import.py  outpaint-cv2.py  outpaint-pm.py  outpaint-resize.md  outpaint-resize.py  outpaint-skimage.py  outpaint.py  single_page_pdfx.py  try_pdf.py  typeset.py  usd-export.py  wind-kxcd.py  wind.py  wind_on_the_grass.md  winding.md  wm.html
samples/sophieandwind/: back_cover_quartet.md  front_cover_quartet.md  frost.md  ice.md  illuminated_shorts.md  jacket.md  making.md  meta_quartet.md  playbook.md  poems.md  quartet.md  quiz.md  something.md  story.py  sun.md  wind.md  winter.md
samples/storycats/: .~lock.winding.md#  extras.md  make.sh  making.md  winding.md
samples/xkcd/: 1078.md
src/: art.py  illuminate.py  outpainting.py  patching.py
src/wind/: hello.md  hello_world.py  prompt.md  test_hello_world.py  unwind  wind.md  wind.py
src/winding/: ast.py  grammar.ebnf  grammar.lark  grammar.py  (+1 more)
tests/: test_grammar.py
(+7 files in other folders)
