[metadata]
name = winding
version = 0.1.0
description = EBNF grammar for the Winding Markdown extension
long_description = file: README.md
long_description_content_type = text/markdown
author = Wind
author_email = wind@wind.kids
url = https://pypi.org/p/winding
license = MIT
keywords = EBNF, Markdown, Winding
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    # Add your package dependencies here

[options.packages.find]
where = src

[options.extras_require]
illuminate =
    openai
    Pillow
    opencv-python

[options.entry_points]
console_scripts =
    illuminate = winding.illuminate:main